cabal-version:       2.2
name:                vex
version:             0.1.0.0
synopsis:            Length-indexed arrays with fast access
-- description:
homepage:            https://github.com/andrewthad/indexed-array
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
-- copyright:
category:            Data
extra-source-files:  CHANGELOG.md

Flag checked
  Description: Add bounds checks
  Default: False
  Manual: True

library
  if flag(checked)
    hs-source-dirs: src-checked
  else
    hs-source-dirs: src-unchecked
  other-modules:
    Vector.Boxed.Internal
    Vector.Boxed.Types
    Vector.MutableByteArray.Internal
    Vector.MutableByteArray.Types
  exposed-modules:
    Vector.Boxed
    Vector.Fin
    Vector.Fin8
    Vector.Fin16
    Vector.MaybeFin8
    Vector.MutableByteArray
    Vector.Optional
    Vector.Optional128
  build-depends:
    , base >=4.12.0.0 && <5
    , contiguous >=0.6.1 && <0.7
    , primitive >=0.7 && <0.9
    , run-st >=0.1 && <0.2
    , tuples >=0.1 && <0.2
    , natural-arithmetic >=0.1.2 && <0.2
    , wide-word >=0.1.1 && <0.2
    , transformers >=0.5.6
    , word-compat >=0.0.4
  hs-source-dirs: src
  ghc-options: -O2 -Wall
  default-language: Haskell2010
